layout/printing/nsPrintJob.cpp
@@ -538,12 +538,10 @@ nsresult nsPrintJob::DoCommonPrint(bool aIsPrintPreview,
     // clear mPtrPreview so that code will use mPtr until that happens.
     mPrtPreview = nullptr;
 
-    // ensures docShell tree navigation in frozen
     SetIsPrintPreview(true);
   } else {
     mProgressDialogIsShown = false;
 
-    // ensures docShell tree navigation in frozen
     SetIsPrinting(true);
   }
 
@@ -2317,11 +2315,6 @@ void nsPrintJob::SetIsPrinting(bool aIsPrinting) {
   mIsDoingPrinting = aIsPrinting;
   if (aIsPrinting) {
     mHasEverPrinted = true;
-  }
-  // Calling SetIsPrinting while in print preview confuses the document viewer
-  // This is safe because we prevent exiting print preview while printing
-  if (!mCreatedForPrintPreview && mDocViewerPrint) {
-    mDocViewerPrint->SetIsPrinting(aIsPrinting);
   }
   if (mPrt && aIsPrinting) {
     mPrt->mPreparingForPrint = true;
